# across-server

./: .commitlintrc.ts  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Makefile copy  README.md  alembic.ini  docker-compose.debug.yml  docker-compose.local.yml  docker-compose.yml  openapi-config.json  openapi.json  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  ticket.yaml
.github/config/: environment.yaml
.github/configs/: environment.yaml
.github/environments/: ecspresso.yaml
.github/workflows/: ci-checks.yml  ci.yml  ecspresso-feature-branch.yml  ecspresso-main-branch.yml  ecspresso-release.yml  feature.yml  lint-pr-title.yml  lint.yml  main.yaml  release-merge.yaml  release-please.yaml  release-please.yml  release-pr.yml  release.yaml  workflow-cd-ecspresso.yml  workflow-cd-preview-ecspresso.yml  workflow-ci-checks.yml  workflow-ci-dockerized-app-build.yml  workflow-ci-dockerized-app-promote.yml  workflow-ci-is-release-pr.yml
across_server/: __init__.py  main.py
across_server/auth/: __init__.py  config.py  enums.py  hashing.py  magic_link.py  router.py  schemas.py  security.py  service.py  strategies.py
across_server/core/: __init__.py  config.py  constants.py  date_utils.py  exceptions.py  limiter.py  logging.py  math_utils.py  schemas.py
across_server/db/: __init__.py  config.py  database.py  enums.py  models.py  utils.py
across_server/util/: __init__.py  create_template.py  ssm.py
containers/: Dockerfile  docker-compose.local.yml  docker-compose.prod.yml
copilot/: .workspace
copilot/server/: manifest.yml
deploy/: task-definition.json  taskdef.json
docker/: compose.lint.yml  compose.local.yml  compose.test.yml  compose.types.yml
migrations/: README  README.md  db_util.py  env.py  seed.py
migrations/build_records/: service_account.py  ssa_records.py
migrations/seeds/: broker_alerts.py  broker_events.py  footprints.py  group_roles.py  groups.py  instruments.py  localizations.py  observation_footprints.py  observation_requests.py  observations.py  observatories.py  observing_proposal.py  permissions.py  proposals.py  roles.py  schedules.py  service_accounts.py  telescopes.py  tles.py  users.py
migrations/util/: build_role.py  footprint_util.py
migrations/versions/: 2024_10_25_1124-023e7f96f47f_init.py  2024_12_18_1738-87a81ecc8d08_adding_observation_and_schedule_tables.py  2024_12_27_1013-a3fa043a00e9_adding_observation_and_schedule_tables.py  2024_12_27_1118-c5361765767a_adding_observation_and_schedule_tables.py  2025_01_13_1620-818523f50d93_service_accounts.py  2025_01_29_1024-3245c430ace2_schedule_table_updates.py  2025_02_08_0751-593643a8ac92_add_tle_table.py  2025_02_13_1443-2b00546497c1_create_tess.py  2025_03_03_1024-3245c430ace2_schedule_table_updates.py  2025_03_07_1443-2b00546497c1_create_tess.py  2025_03_07_1528-3df02ad6028d_service_account_group_roles.py  2025_03_12_1313-3df02ad6028d_service_account_group_roles.py  2025_03_20_1335-f1576fb297ac_add_ephemeris_types_and_parameters.py  2025_04_05_1323-438a1fe7c75c_add_ephemeris_parameters_and_types.py  2025_04_07_1016-34a2b65ed359_change_up_for_nesting.py  2025_04_09_1634-201d0dd6710f_add_instrument_metadata_parameters.py  2025_04_15_1532-a0d523f8883b_bandpass_to_min_max.py  2025_04_21_1415-e4ec21aebc19_changing_bandpass_definitions_for_.py  2025_04_23_1248-0f2036717762_add_instrument_metadata_parameters.py  2025_04_23_1549-ed3a08dbfcc0_init.py  2025_04_23_1552-f4b28fc4a0db_tess_observatory_data.py  2025_04_24_1521-a6590318e932_create_ixpe.py  2025_04_29_1521-a6590318e932_create_ixpe.py  2025_04_30_1606-7f001eadcb4a_add_fermi.py  _2025_04_21_1415-e4ec21aebc19_changing_bandpass_definitions_for_.py  _2025_04_23_1552-2b00546497c1_tess_observatory_data.py  _2025_04_28_1248-0f2036717762_add_instrument_metadata_parameters.py  _2025_04_30_1513-80ed2c402962_adding_fov_and_nulling.py  _2025_05_06_1129_043885e1cd78_permissions_and_roles_data.py  _2025_05_14_1515-7f001eadcb4a_add_fermi.py  _2025_05_14_1521-a6590318e932_create_ixpe.py  _2025_05_16_1552-2b00546497c1_tess_observatory_data.py  _2025_05_19_1515-7f001eadcb4a_add_fermi.py  _2025_05_20_1552-2b00546497c1_tess_observatory_data.py  _2025_05_21_1439-7264308ca648_adding_daterange_index_to_schedule.py  _2025_05_28_1155-3809d4ab4e06_service_account_hashed_key_and_salt.py  _2025_05_28_1327-ef89d3f04ff7_add_nustar.py  _2025_06_17_1155-3809d4ab4e06_service_account_hashed_key.py  _2025_06_18_1424-d4208fedfabf_nicer_observatory_data.py  _2025_06_23_1436-457fb787204d_chandra_observatory_data.py  (+60 more)
requirements/: action.in  action.txt  base.in  deploy.in  deploy.txt  dev.in  dev.txt  lint.in  lint.txt  local.in  local.txt  prod.in  prod.txt  test.in  test.txt  types.in
scripts/: aws-mfa-auth.py  create_env_file.py  mfa.sh  project_observation_footprints.py
tests/: conftest.py  main_test.py
tests/auth/: conftest.py  hashing_test.py  magic_link_test.py  (+3 more)
(+394 files in other folders)
