[project]
name = "across-server"
authors = [
  { name = "Jamie A. Kennea", email = "jak51@psu.edu" },
  { name = "Nitzan  N. Frock", email = "nitzan.n.frock@nasa.gov" },
  { name = "Kirill G. Vorobyev", email = "kirill.g.vorobyev@nasa.gov" },
  { name = "Samuel D. Wyatt", email = "samuel.d.wyatt@nasa.gov" },
]
description = "The NASA ACROSS server providing tools and utilities for various NASA missions to aid in coordination of large observation efforts."
dynamic = ["version"]
maintainers = [
  { name = "Jamie A. Kennea", email = "jak51@psu.edu" },
  { name = "Nitzan  N. Frock", email = "nitzan.n.frock@nasa.gov" },
  { name = "Kirill G. Vorobyev", email = "kirill.g.vorobyev@nasa.gov" },
  { name = "Samuel D. Wyatt", email = "samuel.d.wyatt@nasa.gov" },
]
requires-python = ">=3.12"
dependencies = ["python-multipart"]

[project.optional-dependencies]
test = ["pytest-fastapi-deps>=0.2.3,<0.3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
[tool.hatch.version]
path = "across_server/__about__.py"
