[project]
name = "across-server"
authors = [
  { name = "Jamie A. Kennea", email = "jak51@psu.edu" },
  { name = "Nitzan  N. Frock", email = "nitzan.n.frock@nasa.gov" },
  { name = "Kirill G. Vorobyev", email = "kirill.g.vorobyev@nasa.gov" },
  { name = "Samuel D. Wyatt", email = "samuel.d.wyatt@nasa.gov" },
]
description = "The NASA ACROSS server providing tools and utilities for various NASA missions to aid in coordination of large observation efforts."
dynamic = ["version"]
maintainers = [
  { name = "Jamie A. Kennea", email = "jak51@psu.edu" },
  { name = "Nitzan  N. Frock", email = "nitzan.n.frock@nasa.gov" },
  { name = "Kirill G. Vorobyev", email = "kirill.g.vorobyev@nasa.gov" },
  { name = "Samuel D. Wyatt", email = "samuel.d.wyatt@nasa.gov" },
]
requires-python = ">=3.12"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["across_server"]
[tool.hatch.version]
path = "across_server/__about__.py"

[tool.pytest]
asyncio_mode = "auto"

[tool.pixi.feature.build.dependencies]
hatch = ">=1.12.0,<2"

[tool.pixi.feature.types.pypi-dependencies]
mypy = "*"
types-requests = "*"
types-cachetools = "*"
types-shapely = "*"
types-python-jose = "*"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"

[tool.pixi.feature.lint.dependencies]
pre-commit = "*"
ruff = ">=0.6.7,<0.7"


[tool.pixi.environments]
default = { solve-group = "default" }
production = { solve-group = "default" }
local = { features = [
  "lint",
  "build",
  "test",
  "types",
  "dev",
], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
lint = ["lint", "types", "test"]


[tool.pixi.tasks]
install = "pixi install --locked"
migrate = "alembic upgrade head"

[tool.pixi.feature.build.tasks]
# Create a wheel for installation
build-wheel = "hatch build"
version = "hatch version"

[tool.pixi.feature.dev.tasks]
# initialize the project
init = { depends-on = ["install", "configure", "build", "migrate", "seed"] }
# start the entire app, use after init
start = { depends-on = ["build", "migrate", "seed"] }
# delete all the data and reset the database
reset = { depends-on = ["down", "rm_db_volume", "build", "migrate", "seed"] }
dev = "fastapi dev src/across_api/main.py"
configure = "python scripts/create_env_file.py"
build = "docker compose -f docker-compose.debug.yml up --build -d"
rev = "alembic revision --autogenerate -m "
seed = "python -m migrations.seed"
down = "docker compose down"
run = "docker compose -f docker-compose.debug.yml up -d"
rm_db_vol = { cmd = "docker volume rm across-server_across-pg-data" }
tail_log = "docker-compose logs -f across-server-app-1"

[tool.pixi.feature.lint.tasks]
lint = "pre-commit run"

[tool.pixi.feature.test.tasks]
test = "pytest --cov **/*/*.py"


[tool.pytest.ini_options]
pythonpath = ["."]
