[project]
name = "across-server"
authors = [
  { name = "Jamie A. Kennea", email = "jak51@psu.edu" },
  { name = "Nitzan  N. Frock", email = "nitzan.n.frock@nasa.gov" },
  { name = "Kirill G. Vorobyev", email = "kirill.g.vorobyev@nasa.gov" },
  { name = "Samuel D. Wyatt", email = "samuel.d.wyatt@nasa.gov" },
]
description = "The NASA ACROSS server providing tools and utilities for various NASA missions to aid in coordination of large observation efforts."
dynamic = ["version"]
maintainers = [
  { name = "Jamie A. Kennea", email = "jak51@psu.edu" },
  { name = "Nitzan  N. Frock", email = "nitzan.n.frock@nasa.gov" },
  { name = "Kirill G. Vorobyev", email = "kirill.g.vorobyev@nasa.gov" },
  { name = "Samuel D. Wyatt", email = "samuel.d.wyatt@nasa.gov" },
]
requires-python = ">= 3.12"

[tool.mypy]
files = ["."]
plugins = ['pydantic.mypy']
disallow_untyped_defs = true
